tests/integration/snapshots/integration__conformance__n_structure_array_trailing_garbage.json.snap
---
source: tests/integration/conformance.rs
expression: output
---
args: []
status: 1
success: false
stdout ---
[1]x
stderr ---
error: unexpected character `x`. expected start of a json value
 --> stdin:1:4
  |
1 | [1]x
  |    ^
